# resultados-mundial

./: .editorconfig  .gitignore  .markdownlint.jsonc  .pylintrc  AGENTS.md  README.md  build_exe.bat  contexto.md  ejecutar.bat  pyproject.toml  wc_2026_data.md  world_cup_2026_squads.md
.github/workflows/: ci.yml
prode_mundial/: __init__.py  analysis.py  bracket.py  data.py  display.py  friendlies_data.py  gui.py  main.py  optimizer.py  output.py  player_ratings.py  predictor.py  real_results.py  scraper.py  splash.py  stats_scraper.py  top_scorer.py  update_players.py  validation.py  version_info.txt  wikiscraper.py
prode_mundial/output/: eliminatorias.csv  eliminatorias.json  fase_grupos.csv  fase_grupos.json  players.json  prode_completo.csv  prode_recomendado.csv  tabla_posiciones.csv  tm_stats_cache.json  wiki_cache.json
prode_mundial/scripts/: fix_players.py  show_haiti_scotland.py
prode_mundial/tests/: test_bracket.py  test_data.py  test_output.py  test_predictor.py  test_top_scorer.py  test_validation.py
